---
config:
  layout: elk
  elk:
    mergeEdges: false
    nodePlacementStrategy: LINEAR_SEGMENTS
---
classDiagram
    User
    Senior
    Tutor

    Activity
    ActivityReport
    ActivityBoard
    TutorBoard
    ActivityManager
    Queue~Senior~

    ChatTab
    ConversationView
    ConversationManager
    ChatDatabase

    CommunicationManager


    %% HERANÇA
    User <|-- Senior
    User <|-- Tutor

    %% ASSOCIAÇÃO
    Senior "0..N" <--> "0..N" Activity
    Tutor "0..N" <--> "1" Activity
    ActivityBoard "1..N" --> "1" ActivityManager
    TutorBoard "1..N" --> "1" ActivityManager
    TutorBoard "1..N" --> "1" CommunicationManager

    %% DEPENDÊNCIA
    ActivityBoard ..> Senior
    ActivityManager ..> Senior
    ActivityBoard ..> Activity
    ActivityManager ..> Activity
    ActivityManager ..> ActivityReport
    TutorBoard ..> ActivityReport

    %% COMPOSIÇÃO
    ActivityManager "1" *-- "0..N" Queue~Senior~

    class User {
      -name: str
      -age: int
      -email_address: str
      -cellphone_number: str
    }

    class Senior {
      -enrolled: list[Activity]
    }

    class Tutor {
      -assigned: list[Activity]
    }

    class Activity {
      -name: str
      -total_spots: int
      -remaining_spots: int
      -participants: list[Senior]
      -tutor: Tutor
    }

    class ActivityReport

    note for ActivityBoard "O atributo 'new_activity' existe apenas se 'user' for uma instância de 'Tutor'."
    class ActivityBoard {
      -activity_manager: ActivityManager
      -user: User
      -selected_activity: Activity | None
      -new_activity: Activity | None

      +show() None
      +hide() None
      +get_available_activities() list[Activity]
      +handle_show_available_activities_click() None
      +handle_enroll_click() bool
      +handle_enter_queue_click() bool
      +handle_register_new_activity_click() None
      +handle_confirm_register_new_activity_click() bool

      -display_error_message(message: str) None
      -display_new_activity_form() None
    }

    class TutorBoard {
      -activity_manager: ActivityManager
      -communication_manager: CommunicationManager
      -tutor: Tutor
      -selected_activity: Activity | None

      +get_activity_report() ActivityReport
      +handle_show_activity_presence_report_click() None
      +handle_send_attendance_reminder_click() bool

      -display_error_message(message: str) None
    }

    class ActivityManager {
      -queue_map: dict[Activity, Queue[Senior]]

      +get_available_activities() list[Activity]
      +enroll(senior: Senior, activity: Activity) bool
      +add_to_queue(senior: Senior, activity: Activity) bool
      +register_new_activity(tutor: Tutor, activity: Activity) bool
      +make_activity_report(activity: Activity) ActivityReport
    }

    class Queue~Senior~ {
      +init() None
      +push(element: Senior) None
      +pop(element: Senior) None
      +is_empty() bool
      +is_full() bool
      +destroy() None
    }

    class CommunicationManager
